--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -134,9 +135,12 @@
           <div class="social__header">
             <img class="social__picture" src="img/avatar-1.svg" alt="Аватар автора фотографии" width="35" height="35">
             <p class="social__caption">Тестим новую камеру! =)</p>
-            <p class="social__likes">Нравится <span class="likes-count">356</span></p>
+            <p class="social__likes">Нравится
+              <span class="likes-count">356</span>
+            </p>
           </div>
-          <div class="social__comment-count">5 из <span class="comments-count">125</span> комментариев</div>
+          <div class="social__comment-count">5 из
+            <span class="comments-count">125</span> комментариев</div>
           <ul class="social__comments">
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
@@ -144,7 +148,7 @@
             </li>
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-3.svg" alt="Аватар комментатора фотографии" width="35" height="35">
-               <p class="social__text">Да это фоташоп!!!!!!!!</p>
+              <p class="social__text">Да это фоташоп!!!!!!!!</p>
             </li>
           </ul>
           <button class="social__loadmore" type="button">Загрузить еще</button>
@@ -163,8 +167,11 @@
   <footer class="page-footer container">
     <div class="page-footer__wrapper">
       <div class="page-footer__copyright copyright">
-        <a class="copyright__link copyright__link--image" href="https://htmlacademy.ru/intensive/javascript"><img src="img/htmla-logo.svg" width="130" height="45" alt="HTML Academy"></a>
-        <p>Сделано в <a class="copyright__link copyright__link--text" href="https://htmlacademy.ru/intensive/javascript">HTML Academy</a> &copy; 2018</p>
+        <a class="copyright__link copyright__link--image" href="https://htmlacademy.ru/intensive/javascript">
+          <img src="img/htmla-logo.svg" width="130" height="45" alt="HTML Academy">
+        </a>
+        <p>Сделано в
+          <a class="copyright__link copyright__link--text" href="https://htmlacademy.ru/intensive/javascript">HTML Academy</a> &copy; 2018</p>
       </div>
 
       <ul class="page-footer__contacts contacts">
@@ -207,5 +214,8 @@
     </div>
   </template>
 
+  <script src="js/pictures.js"></script>
+
 </body>
+
 </html>
